# libuseful

./: README  TODO
src/: CMakeLists.txt  hashtable.c  list.c  optin.c  platform.c  stringbuilder.c  test_utils.h
src/include/: optin.h  stringbuilder.h  test_utils.h
src/testing/: hashtable_test.c  optin_test.c  platform_test.c  stringbuilder_test.c
